[gd_scene load_steps=8 format=3 uid="uid://c3a6idn7jdtb"]

[ext_resource type="Script" uid="uid://domlgsimnvui" path="res://UI/ui.gd" id="1_fyqef"]
[ext_resource type="FontFile" uid="uid://cxit8lrord42r" path="res://UI/BoldPixels.ttf" id="2_m6e0p"]

[sub_resource type="LabelSettings" id="LabelSettings_n5ude"]
font = ExtResource("2_m6e0p")
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_27fn8"]
font = ExtResource("2_m6e0p")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ibotj"]
font = ExtResource("2_m6e0p")

[sub_resource type="LabelSettings" id="LabelSettings_m6e0p"]
font = ExtResource("2_m6e0p")
font_size = 85

[sub_resource type="LabelSettings" id="LabelSettings_nltto"]
font = ExtResource("2_m6e0p")
font_size = 32

[node name="UI" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_fyqef")

[node name="Polygon2D2" type="Polygon2D" parent="."]
color = Color(0.3070968, 0, 0.09344535, 1)
polygon = PackedVector2Array(0, 0, 0, 62, 467, 62, 467, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.8627451, 0.101960786, 0.26666668, 1)
polygon = PackedVector2Array(463, 0, 463, 58, 0, 58, 0, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="stats_menu" type="Node2D" parent="."]
position = Vector2(-227, 505)

[node name="Polygon2D" type="Polygon2D" parent="stats_menu"]
modulate = Color(1, 1, 1, 0.39215687)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-52, 0, 223, 0, 223, 141, -52, 141)

[node name="RichTextLabel" type="Label" parent="stats_menu"]
offset_left = -47.0
offset_right = -7.0
offset_bottom = 40.0
text = "MAX HEALTH: XX
SPEED: XX
DAMAGE: XX
FIRE RATE: X/sec"
label_settings = SubResource("LabelSettings_n5ude")

[node name="Wave" type="Label" parent="."]
offset_top = 60.0
offset_right = 325.0
offset_bottom = 124.0
text = "Wave: xx"
label_settings = SubResource("LabelSettings_27fn8")

[node name="enemies" type="Label" parent="."]
offset_left = 111.0
offset_top = 66.0
offset_right = 436.0
offset_bottom = 130.0
text = "enemies left: xx"
label_settings = SubResource("LabelSettings_ibotj")

[node name="death_screen" type="Node2D" parent="."]
position = Vector2(232, -273)

[node name="Button" type="Button" parent="death_screen"]
offset_left = 132.0
offset_top = -76.0
offset_right = 554.0
offset_bottom = -3.0

[node name="Label" type="Label" parent="death_screen/Button"]
layout_mode = 0
offset_left = 115.0
offset_top = -13.0
offset_right = 313.0
offset_bottom = 73.0
text = "Retry"
label_settings = SubResource("LabelSettings_m6e0p")

[node name="Button2" type="Button" parent="death_screen"]
offset_left = 131.0
offset_top = 9.0
offset_right = 553.0
offset_bottom = 82.0

[node name="Label" type="Label" parent="death_screen/Button2"]
layout_mode = 0
offset_left = 33.0
offset_top = -7.0
offset_right = 394.0
offset_bottom = 79.0
text = "Main Menu"
label_settings = SubResource("LabelSettings_m6e0p")

[node name="health" type="Label" parent="."]
offset_left = 4.0
offset_top = -2.0
offset_right = 44.0
offset_bottom = 21.0
text = "100/100"
label_settings = SubResource("LabelSettings_nltto")
